--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5",
     "react-scripts": "5.0.1",
